# calm-bot

./: .gitignore  deploy.sh  renovate.json
.github/workflows/: deploy.yml
cdk-app/: cdk.json  package-lock.json  package.json
cdk-app/lambda/: .dockerignore  Dockerfile  chat.py  docker-compose.yml  pyproject.toml  requirements.txt
cdk-app/lambda/tests/: requirements.txt  test_chat.py
cdk-app/lib/: calm_chatbot_stack.ts
cdk-app/test/: cdk-app.test.ts
next-app/: package-lock.json  package.json
next-app/src/config/: amplify-config.ts
next-app/styles/: globals.css
