[tool.poetry]
name = "calm-chatbot-lambda"
version = "0.1.0"
description = "Lambda function for handling chat interactions with AWS Bedrock"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "3.13.0"
boto3 = "1.35.68"
botocore = "1.35.68"
tiktoken = "0.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pytest-asyncio = "0.21.2"
moto = "4.2.14"
black = "23.12.1"
isort = "5.13.2"
flake8 = "6.1.0"

[build-system]
requires = ["poetry-core==1.9.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
